--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="shortcut icon" href="favicon.svg" type="image/vnd.microsoft.icon"/>
-  <link rel="icon" href="favicon.svg" type="image/vnd.microsoft.icon"/>
+  <link rel="icon shortcut" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" sizes="any" href="./favicon.svg" type="image/svg+xml">
+  <link rel="mask-icon" href="./favicon.svg" color="black">
   <title>stchieve</title>
 </head>
 
